--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     properties:
       mail.smtp.auth: true
       mail.smtp.ssl.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
 mybatis:
   mapper-locations: mappers/**/*.xml
   type-aliases-package: '**.model.vo'
