--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.3-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'war'
 }
 
 group = 'com.multi.bbs'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+apply plugin: 'war'
 
 configurations {
 	compileOnly {
