war 관련 2 / 김성호 / 02-24 09:45 [주요 내용] 	- war 관련 build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
+bootWar {
+	archiveBaseName = "demo"
+	archiveFileName = 'demo.war'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
